# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: easy.txt  hard.txt  medium.txt
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajennettu_monopoli.md  monopoli_luokkakaavio.md  sekvenssikaavio.md
src/: config.py  database_connection.py  easy.txt  hard.txt  index.py  init_database.py  medium.txt  read_sudokus.py  sudokus.py
src/entities/: sudoku.py  user.py
src/repositories/: sudoku_repository.py  user_repository.py
src/services/: sudoku_service.py  user_service.py
src/tests/: conftest.py  test.txt  write_test.txt
src/tests/repositories/: sudoku_repository_test.py  user_repository_test.py
src/tests/services/: sudoku_service_test.py  user_service_test.py
src/ui/: add_sudoku_view.py  easy_view.py  game_view.py  login_view.py  main_view.py  register_view.py  sudoku_list_view.py  sudoku_select_view.py  sudoku_view.py  ui.py
